Fix: bring back top spacing on about page

--- a/src/styles/components/about/_about.scss
+++ b/src/styles/components/about/_about.scss
@@ -2,7 +2,7 @@
 @use "../../base/mixins" as *;
 
 .page-about {
-    // padding-top: 6rem;
+    padding-top: 6rem;
     // height: 100vh;
     // overflow-y: scroll;
     z-index: 60;
